get data in api

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
+<nav>
+    <ul>
+        <li><a routerLink="/" routerLinkActive="red" [routerLinkActiveOptions]="{exact:true}">Fresher-Api</a></li>
+    </ul>
+</nav>
 <router-outlet></router-outlet>
