--- a/src/app/fresher-api/fresher-api.component.html
+++ b/src/app/fresher-api/fresher-api.component.html
@@ -28,36 +28,36 @@
         <!-- user_id Column -->
         <ng-container matColumnDef="user_id">
             <mat-header-cell *matHeaderCellDef> USER_ID </mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{user.user_id}} </mat-cell>
+            <mat-cell *matCellDef="let user"> {{user.user_id}} </mat-cell>
         </ng-container>
 
         <!-- pass Column -->
         <ng-container matColumnDef="pass">
             <mat-header-cell *matHeaderCellDef> PASS </mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{user.pass}} </mat-cell>
+            <mat-cell *matCellDef="let user"> {{user.pass}} </mat-cell>
         </ng-container>
 
         <!-- cat Column -->
         <ng-container matColumnDef="cat">
             <mat-header-cell *matHeaderCellDef> CAT </mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{user.cat}} </mat-cell>
+            <mat-cell *matCellDef="let user"> {{user.cat}} </mat-cell>
         </ng-container>
 
         <!-- mail Column -->
         <ng-container matColumnDef="mail">
             <mat-header-cell *matHeaderCellDef> MAIL </mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{user.mail}} </mat-cell>
+            <mat-cell *matCellDef="let user"> {{user.mail}} </mat-cell>
         </ng-container>
 
         <!-- checkbox Column -->
         <ng-container matColumnDef="checkbox">
             <mat-header-cell *matHeaderCellDef> CHECKBOX </mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{user.checkbox}} </mat-cell>
+            <mat-cell *matCellDef="let user"> {{user.checkbox}} </mat-cell>
         </ng-container>
 
         <!-- Action Column -->
         <ng-container matColumnDef="action">
-            <mat-header-cell *matHeaderCellDef> Action </mat-header-cell>
+            <mat-header-cell *matHeaderCellDef> ACTION </mat-header-cell>
         </ng-container>
 
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
