--- a/src/app/fresher-api/fresher-api.component.html
+++ b/src/app/fresher-api/fresher-api.component.html
@@ -41,7 +41,7 @@
         </div><br>
 
         <label style="font-size: large; font-weight: 700;">CheckBox :-</label>
-        <input type="checkbox" name="checkbox" placeholder="Enter Your Checkbox" style="margin-left: 10px;"
+        <input type="checkbox" name="checkbox" placeholder="Enter Your Checkbox" style="margin-left: 18px; border: 2px solid black;"
             class="checkbox" formControlName="checkbox" />
         <div *ngIf="loginForm.controls['checkbox'].invalid && loginForm.controls['checkbox'].touched"
             class="alert alert-danger">
