--- a/src/app/fresher-api/fresher-api.component.html
+++ b/src/app/fresher-api/fresher-api.component.html
@@ -1,7 +1,10 @@
-<div class="container">
+<head>
+    <link alt="" href="./fresher-api.component.css" rel="stylesheet" />
+</head>
+<div>
 
     <!-- FORM -->
-    <form [formGroup]="loginForm" novalidate>
+    <form [formGroup]="loginForm" class="container" novalidate>
         <label style="font-size: large; font-weight: 700;">UserId <span style="margin-left: 28px;">:-</span></label>
         <input type="text" name="user_id" placeholder="Enter Your User Id" style="margin-left: 17px;"
             formControlName="user_id" />
@@ -35,99 +38,75 @@
             formControlName="mail" />
         <div *ngIf="loginForm.controls['mail'].invalid && loginForm.controls['mail'].touched"
             class="alert alert-danger">
+            Mail is not valid
             <div *ngIf="loginForm.controls['mail'].errors.required">
                 Mail is required.
             </div>
-            <div *ngIf="loginForm.controls['mail'].errors.required" class="alert alert-danger">Please enter a valid
-                mail.</div>
         </div><br>
 
         <label style="font-size: large; font-weight: 700;">CheckBox :-</label>
         <input type="checkbox" name="checkbox" placeholder="Enter Your Checkbox" style="margin-left: 22px;"
-            class="checkbox" formControlName="checkbox" />
-        <div *ngIf="loginForm.controls['checkbox'].invalid && loginForm.controls['checkbox'].touched"
-            class="alert alert-danger">
-            <div *ngIf="loginForm.controls['checkbox'].errors.required">
-                Checkbox is required.
-            </div>
-        </div><br>
+            class="checkbox" formControlName="checkbox" /><br>
 
         <button name="button" id="submit" type="button" value="Submit" (click)="onSubmit()" style="cursor:pointer;"
-            class="btn btn-primary" [disabled]="!loginForm.valid">Submit</button>
+            class="btn btn-primary btn-sub" [disabled]="!loginForm.valid">Submit</button>
     </form>
 
     <!-- TABLE -->
-    <table mat-table class="table" [dataSource]="userData" matSort style="border-top: hidden;">
-
-        <!-- user_id Column -->
-        <ng-container matColumnDef="USER_ID">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header
-                style="font-size: large; font-weight: 700; color: black; padding-bottom: 15px;"> User_id </th>
-            <td mat-cell *matCellDef="let userData"> {{userData.USER_ID}} </td>
-        </ng-container>
-
-        <!-- pass Column -->
-        <ng-container matColumnDef="PASS">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header
-                style="font-size: large; font-weight: 700; color: black; padding-right: 33px; padding-bottom: 15px;">
-                Pass </th>
-            <td mat-cell *matCellDef="let userData"> {{userData.PASS}} </td>
-        </ng-container>
-
-        <!-- cat Column -->
-        <ng-container matColumnDef="CAT">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header
-                style="font-size: large; font-weight: 700; color: black; padding-right: 33px; padding-bottom: 15px;">
-                Cat </th>
-            <td mat-cell *matCellDef="let userData"> {{userData.CAT}} </td>
-        </ng-container>
-
-        <!-- mail Column -->
-        <ng-container matColumnDef="MAIL">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header
-                style="font-size: large; font-weight: 700; color: black; padding-right: 33px; padding-bottom: 15px;">
-                Mail </th>
-            <td mat-cell *matCellDef="let userData"> {{userData.MAIL}} </td>
-        </ng-container>
-
-        <!-- checkbox Column -->
-        <ng-container matColumnDef="CHECKBOX">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header
-                style="font-size: large; font-weight: 700; color: black; padding-bottom: 15px;"> Checkbox </th>
-            <td mat-cell *matCellDef="let userData"> {{userData.CHECKBOX}} </td>
-        </ng-container>
-
-        <!-- Action Column -->
-        <ng-container matColumnDef="Action">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header
-                style="font-size: large; font-weight: 700; color: black; padding-right: 33px; padding-bottom: 15px;">
-                Action </th>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-</div>
-
-<!-- <table class="table">
-        <thead>
-            <th>USER_ID</th>
-            <th>PASS</th>
-            <th>CAT</th>
-            <th>MAIL</th>
-            <th>CHECKBOX</th>
-            <th>Action</th>
-        </thead>
-        <tbody>
-            <tr *ngFor="let user of userData">
-                <td>{{ user.user_id }}</td>
-                <td>{{ user.pass }}</td>
-                <td>{{ user.cat }}</td>
-                <td>{{ user.mail }}</td>
-                <td>{{ user.checkbox }}</td>
-                <td>
-                    <button type="button" (click)="deletePost()" class="btn btn-danger">Delete</button>
+    <div class="row">
+        <table mat-table class="table" [dataSource]="userData" style="border-top: hidden;">
+            <ng-container matColumnDef="USER_ID">
+                <th mat-header-cell *matHeaderCellDef
+                    style="font-size: large; font-weight: 700; color: black; padding-bottom: 15px;">User_id</th>
+                <td mat-cell *matCellDef="let element" class="cursor" style="padding-top: 30px;">{{ element.USER_ID }}
                 </td>
-            </tr>
-        </tbody>
-    </table> -->
+            </ng-container>
+
+            <ng-container matColumnDef="PASS">
+                <th mat-header-cell *matHeaderCellDef
+                    style="font-size: large; font-weight: 700; color: black; padding-right: 33px; padding-bottom: 15px;">
+                    Pass</th>
+                <td mat-cell *matCellDef="let element" class="cursor" style="padding-top: 30px;">
+                    {{ element.PASS }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="CAT">
+                <th mat-header-cell *matHeaderCellDef
+                    style="font-size: large; font-weight: 700; color: black; padding-right: 33px; padding-bottom: 15px;">
+                    Cat</th>
+                <td mat-cell *matCellDef="let element" class="cursor" style="padding-top: 30px;">
+                    {{ element.CAT }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="MAIL">
+                <th mat-header-cell *matHeaderCellDef
+                    style="font-size: large; font-weight: 700; color: black; padding-right: 33px; padding-bottom: 15px;">
+                    Mail</th>
+                <td mat-cell *matCellDef="let element" class="cursor" style="padding-top: 30px;">
+                    {{ element.MAIL }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="CHECKBOX">
+                <th mat-header-cell *matHeaderCellDef
+                    style="font-size: large; font-weight: 700; color: black; padding-bottom: 15px;">Checkbox</th>
+                <td mat-cell *matCellDef="let element" class="cursor" style="padding-top: 30px;">
+                    {{ element.CHECKBOX }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="Action">
+                <th mat-header-cell *matHeaderCellDef
+                    style="font-size: large; font-weight: 700; color: black; padding-bottom: 15px;">Action</th>
+                <td mat-cell *matCellDef="let element" class="cursor" style="padding-bottom: 15px;"><button
+                        type="button" (click)="deletePost()" class="btn btn-danger">Delete</button></td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedCol"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedCol"></tr>
+        </table>
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 50]"> </mat-paginator>
+    </div>
+</div>
