--- a/src/app/fresher-api/fresher-api.component.html
+++ b/src/app/fresher-api/fresher-api.component.html
@@ -3,68 +3,69 @@
 </head>
 <div>
 
-    <!-- FORM -->
+    <!----------------------------------- FORM ----------------------------------->
     <form [formGroup]="loginForm" class="container" novalidate>
         <label style="font-size: large; font-weight: 700;">UserId <span style="margin-left: 28px;">:-</span></label>
-        <input type="text" name="user_id" placeholder="Enter Your User Id" style="margin-left: 17px;"
-            formControlName="user_id" />
-        <div *ngIf="loginForm.controls['user_id'].invalid && loginForm.controls['user_id'].touched"
+        <input type="text" name="USER_ID" placeholder="Enter Your User Id" style="margin-left: 17px;"
+            formControlName="USER_ID" />
+        <div *ngIf="loginForm.controls['USER_ID'].invalid && loginForm.controls['USER_ID'].touched"
             class="alert alert-danger">
-            <div *ngIf="loginForm.controls['user_id'].errors.required">
+            <div *ngIf="loginForm.controls['USER_ID'].errors.required">
                 UserId is required.
             </div>
         </div><br>
 
         <label style="font-size: large; font-weight: 700;">Pass <span style="margin-left: 46px;">:-</span></label>
-        <input type="text" name="pass" placeholder="Enter Your Pass" style="margin-left: 18px;"
-            formControlName="pass" />
-        <div *ngIf="loginForm.controls['pass'].invalid && loginForm.controls['pass'].touched"
+        <input type="text" name="PASS" placeholder="Enter Your Pass" style="margin-left: 18px;"
+            formControlName="PASS" />
+        <div *ngIf="loginForm.controls['PASS'].invalid && loginForm.controls['PASS'].touched"
             class="alert alert-danger">
-            <div *ngIf="loginForm.controls['pass'].errors.required">
+            <div *ngIf="loginForm.controls['PASS'].errors.required">
                 Pass is required.
             </div>
         </div><br>
 
         <label style="font-size: large; font-weight: 700;">Cat <span style="margin-left: 55px;">:-</span></label>
-        <input type="text" name="cat" placeholder="Enter Your Cat" style="margin-left: 18px;" formControlName="cat" />
-        <div *ngIf="loginForm.controls['cat'].invalid && loginForm.controls['cat'].touched" class="alert alert-danger">
-            <div *ngIf="loginForm.controls['cat'].errors.required">
+        <input type="text" name="CAT" placeholder="Enter Your Cat" style="margin-left: 18px;" formControlName="CAT" />
+        <div *ngIf="loginForm.controls['CAT'].invalid && loginForm.controls['CAT'].touched" class="alert alert-danger">
+            <div *ngIf="loginForm.controls['CAT'].errors.required">
                 Cat is required.
             </div>
         </div><br>
 
         <label style="font-size: large; font-weight: 700;">Mail <span style="margin-left: 46px;">:-</span></label>
-        <input type="text" name="mail" placeholder="Enter Your Mail" style="margin-left: 18px;"
-            formControlName="mail" />
-        <div *ngIf="loginForm.controls['mail'].invalid && loginForm.controls['mail'].touched"
+        <input type="text" name="MAIL" placeholder="Enter Your Mail" style="margin-left: 18px;"
+            formControlName="MAIL" />
+        <div *ngIf="loginForm.controls['MAIL'].invalid && loginForm.controls['MAIL'].touched"
             class="alert alert-danger">
             Mail is not valid
-            <div *ngIf="loginForm.controls['mail'].errors.required">
+            <div *ngIf="loginForm.controls['MAIL'].errors.required">
                 Mail is required.
             </div>
         </div><br>
 
         <label style="font-size: large; font-weight: 700;">CheckBox :-</label>
-        <input type="checkbox" name="checkbox" placeholder="Enter Your Checkbox" style="margin-left: 22px;"
-            class="checkbox" formControlName="checkbox" /><br>
+        <input type="checkbox" name="CHECKBOX" placeholder="Enter Your Checkbox" style="margin-left: 22px;"
+            class="checkbox" formControlName="CHECKBOX" /><br>
 
         <button name="button" id="submit" type="button" value="Submit" (click)="onSubmit()" style="cursor:pointer;"
             class="btn btn-primary btn-sub" [disabled]="!loginForm.valid">Submit</button>
     </form>
 
-    <!-- TABLE -->
+    <!----------------------------------- TABLE ----------------------------------->
     <div class="row">
         <table mat-table class="table" [dataSource]="userData" style="border-top: hidden;">
             <ng-container matColumnDef="USER_ID">
                 <th mat-header-cell *matHeaderCellDef
-                    style="font-size: large; font-weight: 700; color: black; padding-bottom: 15px;">User_id</th>
+                    style="font-size: large; font-weight: 700; color: black; padding-right: 50px; padding-bottom: 15px;">
+                    User_id</th>
                 <td mat-cell *matCellDef="let element" class="cursor" style="padding-top: 30px;">{{ element.USER_ID }}
                 </td>
             </ng-container>
 
             <ng-container matColumnDef="PASS">
                 <th mat-header-cell *matHeaderCellDef
-                    style="font-size: large; font-weight: 700; color: black; padding-right: 33px; padding-bottom: 15px;">
+                    style="font-size: large; font-weight: 700; color: black; padding-right: 90px; padding-bottom: 15px;">
                     Pass</th>
                 <td mat-cell *matCellDef="let element" class="cursor" style="padding-top: 30px;">
                     {{ element.PASS }}
@@ -73,7 +74,7 @@
 
             <ng-container matColumnDef="CAT">
                 <th mat-header-cell *matHeaderCellDef
-                    style="font-size: large; font-weight: 700; color: black; padding-right: 33px; padding-bottom: 15px;">
+                    style="font-size: large; font-weight: 700; color: black; padding-right: 90px; padding-bottom: 15px;">
                     Cat</th>
                 <td mat-cell *matCellDef="let element" class="cursor" style="padding-top: 30px;">
                     {{ element.CAT }}
@@ -82,7 +83,7 @@
 
             <ng-container matColumnDef="MAIL">
                 <th mat-header-cell *matHeaderCellDef
-                    style="font-size: large; font-weight: 700; color: black; padding-right: 33px; padding-bottom: 15px;">
+                    style="font-size: large; font-weight: 700; color: black; padding-bottom: 15px;">
                     Mail</th>
                 <td mat-cell *matCellDef="let element" class="cursor" style="padding-top: 30px;">
                     {{ element.MAIL }}
@@ -91,7 +92,7 @@
 
             <ng-container matColumnDef="CHECKBOX">
                 <th mat-header-cell *matHeaderCellDef
-                    style="font-size: large; font-weight: 700; color: black; padding-bottom: 15px;">Checkbox</th>
+                    style="font-size: large; font-weight: 700; color: black; padding-bottom: 15px; padding-right: 50px;">Checkbox</th>
                 <td mat-cell *matCellDef="let element" class="cursor" style="padding-top: 30px; padding-left: 40px;">
                     {{ element.CHECKBOX }}
                 </td>
@@ -101,7 +102,7 @@
                 <th mat-header-cell *matHeaderCellDef
                     style="font-size: large; font-weight: 700; color: black; padding-bottom: 15px;">Action</th>
                 <td mat-cell *matCellDef="let element" class="cursor" style="padding-bottom: 15px;"><button
-                        type="button" (click)="deleteUser(element.USER_ID)" class="btn btn-danger">Delete</button></td>
+                        type="button" (click)="deleteUser()" class="btn btn-denger">Delete</button></td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedCol"></tr>
