--- a/src/app/fresher-api/fresher-api.component.html
+++ b/src/app/fresher-api/fresher-api.component.html
@@ -102,7 +102,7 @@
                 <th mat-header-cell *matHeaderCellDef
                     style="font-size: large; font-weight: 700; color: black; padding-bottom: 15px;">Action</th>
                 <td mat-cell *matCellDef="let element" class="cursor" style="padding-bottom: 15px;"><button
-                        type="button" (click)="deleteUser()" class="btn btn-denger">Delete</button></td>
+                        type="button" (click)="deleteUser(element.USER_ID)" class="btn btn-denger">Delete</button></td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedCol"></tr>
