--- a/src/app/fresher-api/fresher-api.component.html
+++ b/src/app/fresher-api/fresher-api.component.html
@@ -92,7 +92,8 @@
 
             <ng-container matColumnDef="CHECKBOX">
                 <th mat-header-cell *matHeaderCellDef
-                    style="font-size: large; font-weight: 700; color: black; padding-bottom: 15px; padding-right: 50px;">Checkbox</th>
+                    style="font-size: large; font-weight: 700; color: black; padding-bottom: 15px; padding-right: 50px;">
+                    Checkbox</th>
                 <td mat-cell *matCellDef="let element" class="cursor" style="padding-top: 30px; padding-left: 40px;">
                     {{ element.CHECKBOX }}
                 </td>
@@ -101,8 +102,10 @@
             <ng-container matColumnDef="Action">
                 <th mat-header-cell *matHeaderCellDef
                     style="font-size: large; font-weight: 700; color: black; padding-bottom: 15px;">Action</th>
-                <td mat-cell *matCellDef="let element" class="cursor" style="padding-bottom: 15px;"><button
-                        type="button" (click)="deleteUser(element.USER_ID)" class="btn btn-denger">Delete</button></td>
+                <td mat-cell *matCellDef="let element" class="cursor" style="padding-bottom: 15px;">
+                    <button type="button" (click)="editUser(element.USER_ID)" class="btn btn-primari">Edit</button>
+                    <button type="button" (click)="deleteUser(element.USER_ID)" class="btn btn-denger">Delete</button>
+                </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedCol"></tr>
